--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "advent_2023_react",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {"@babel/plugin-proposal-private-property-in-object": "7.21.11"},
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
